--- a/backend.yaml
+++ b/backend.yaml
@@ -190,19 +190,30 @@ kind: Ingress
 metadata:
   name: aimusei-ingress
   namespace: aimusei
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
-  - host: "aimusei.local"
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: frontend-service
-            port:
-              number: 80
+    - host: "aimusei.local"
+      http:
+        paths:
+          # 1. Regola per il Backend (più specifica)
+          - path: /api(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8090
+          # 2. Regola per il Frontend (catch-all)
+          - path: /(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 80
 ---
 # --- CONFIGMAP PER I DATI JSON ---
 # Contiene il file ai_musei.opera.json che verrà importato da MongoDB al primo avvio.
