--- a/backend.yaml
+++ b/backend.yaml
@@ -64,7 +64,7 @@ spec:
     spec:
       containers:
       - name: be
-        image: gianmerco/be:prova
+        image: aptul9/backend:1.8
         ports:
         - containerPort: 8090
         env:
