ingress be aggiornato

--- a/application/backend/backend.yaml
+++ b/application/backend/backend.yaml
@@ -89,6 +89,8 @@ metadata:
   namespace: aimusei
 data:
   config.properties: |
+    server.servlet.context-path=/api
+    
     spring.data.mongodb.uri=mongodb://mongo-service:27017/aimusei
     aimusei.key=keytest123123
 ---
@@ -171,21 +173,19 @@ metadata:
   name: aimusei-ingress-backend
   namespace: aimusei
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - host: "aimusei.local"
       http:
         paths:
-          - path: /api(/|$)(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: backend-service
                 port:
                   number: 8090
-
 ---
 
 apiVersion: networking.k8s.io/v1
