config map updated

--- a/application/backend/backend.yaml
+++ b/application/backend/backend.yaml
@@ -88,8 +88,7 @@ metadata:
   namespace: aimusei
 data:
   config.properties: |
-    server.servlet.context-path=/api
-    
+    server.servlet.context-path=/api  
     spring.data.mongodb.uri=mongodb://mongo-service:27017/aimusei
     aimusei.key=keytest123123
 ---
@@ -102,7 +101,7 @@ data:
   datasources.env: |
     mongo.host=mongo-service
     mongo.database=aimusei
-
+    spring.data.mongodb.uri=mongodb:///mongo-service:27017/
 ---
 apiVersion: v1
 kind: Service
